[gd_scene load_steps=3 format=3 uid="uid://cast1jxvgp6jk"]

[ext_resource type="Texture2D" uid="uid://cr00hkcqxfhha" path="res://raw_images/backgrounds/backgroundSpace_01.1.png" id="1_m28cv"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_mjp0j"]

[node name="Start Menu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjp0j")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("1_m28cv")
offset = Vector2(1, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="start game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="load game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="how to play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = -109.0
offset_top = -218.0
offset_right = 100.0
offset_bottom = -195.0
text = "COSMIC CLIMBER"
horizontal_alignment = 1

[node name="Load game menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/load game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/how to play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
